--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,8 +31,8 @@ body {
   line-height: 1.7;
 }
 main {
-  width: 960px;
-  max-width: calc(100% - 2em);
+  width: 100%;
+  max-width: 1000px;
   margin: auto;
   padding: 3em 1em;
 }
