--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -16,9 +16,10 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
     <BaseHead title={title} description={description} />
     <style>
       main {
-        width: calc(100% - 2em);
-        max-width: 100%;
-        margin: 0;
+        width: 100%;
+        max-width: 1000px;
+        margin: auto;
+        padding: 3em 1em;
       }
       .hero-image {
         width: 100%;
@@ -30,8 +31,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
         box-shadow: var(--box-shadow);
       }
       .prose {
-        width: 960px;
-        max-width: calc(100% - 2em);
+        width: 100%;
         margin: auto;
         padding: 1em;
         color: rgb(var(--gray-dark));
@@ -60,7 +60,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
     <main>
       <article>
         <div class='hero-image'>
-          {heroImage && <Image width={1020} height={510} src={heroImage} alt='' />}
+          {heroImage && <Image width={1000} height={500} src={heroImage} alt='' />}
         </div>
         <div class='prose'>
           <div class='title'>
